:sparkles: Update Form

--- a/AGAPE LOGIN/login.html
+++ b/AGAPE LOGIN/login.html
@@ -6,23 +6,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AGAPE</title>
-    <link rel="icon" href="<!-- nombre de img -->">
+    <link rel="icon" href="-- nombre de img --">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="agape.css">
 </head>
 
 <header>
 </header>
 
-<body>
+<body id="bodydBG">
+    <!-- Control y y registro der marcaciones -->
 
     <form action="" id="formLogIn">
-        <label for="tittle" id="titulo">Control y y registro der marcaciones</label> <br>
-        <label for="text">Email</label>    
-        <input type="email" name="" class="ipt" placeholder="Escriba su email">
-        <label for="text">Contraseña</label> 
-        <input type="password" name="" class="ipt" placeholder="Escriba su contraseña">
-        <input type="submit" id="btnLogIn" value="Iniciar sesión">
-
-
+        <label for="tittle" id="titulo"></label>Iniciar sesión <br><br>
+        <label for="text">Email</label>   <br> 
+        <input type="email" name="" class="ipt" placeholder="Escriba su email"><br>
+        <label for="text">Contraseña</label> <br>
+        <input type="password" name="" class="ipt" placeholder="Escriba su contraseña"><br>
+        <input type="submit" id="btnLogIn" value="Iniciar sesión"><br>
+        <input type="checkbox" name="" id="" value="Recuerdáme">
+        <a href="--url form SignUp--">Registrarme ahora</a>
+        
 
     </form>
 
