--- a/AGAPE LOGIN/login.html
+++ b/AGAPE LOGIN/login.html
@@ -6,8 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AGAPE</title>
-    <link rel="icon" href="-- nombre de img --">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/RESOURCES/LOGO.png">
     <link rel="stylesheet" href="agape.css">
 </head>
 
@@ -18,13 +17,15 @@
     <!-- Control y y registro der marcaciones -->
 
     <form action="" id="formLogIn">
-        <label for="tittle" id="titulo"></label>Iniciar sesión <br><br>
-        <label for="text">Email</label>   <br> 
+        <label for="tittle" id="titulo"></label>
+        
+        Iniciar sesión <br><br>
+        <label for="text">Email</label><br> 
         <input type="email" name="" class="ipt" placeholder="Escriba su email"><br>
         <label for="text">Contraseña</label> <br>
         <input type="password" name="" class="ipt" placeholder="Escriba su contraseña"><br>
         <input type="submit" id="btnLogIn" value="Iniciar sesión"><br>
-        <input type="checkbox" name="" id="" value="Recuerdáme">
+       <label for=""> <input type="checkbox" name="" id="" value="cbx"> Recuerdáme</label>
         <a href="--url form SignUp--">Registrarme ahora</a>
         
 
