:tada: Form Registro

--- a/LogIns/LogIn1/login2.html
+++ b/LogIns/LogIn1/login2.html
@@ -17,7 +17,7 @@
         <div class="contentBox">
             <div class="formBox">
                 <h2>Inicia sesión</h2>
-                <form>
+                <form action="#">
                     <div class="inputBox">
                         <span>username</span>
                         <input type="text" class="ipt" placeholder="Escriba su usuario" required>
@@ -30,7 +30,7 @@
                     </div>
                     <br>
                     <div class="inputBox">
-                        <a href="https://www.google.com/"><input type="submit" id="btnLogIn" value="Iniciar sesión"></a>
+                        <a href="prueba.html"><input type="submit" id="btnLogIn" value="Iniciar sesión"></a>
                     </div>
     
                 </form>
