:check: Finish 2 forms

--- a/LogIns/LogIn1/LogIn_Marcaciones.html
+++ b/LogIns/LogIn1/LogIn_Marcaciones.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/RESOURCES/TabLogo.png">
-    <link rel="stylesheet" href="style1.css">
+    <nk rel="icon" href="/RESOURCES/TabLogo.png">
+    <nk rel="stylesheet" href="style1.css">
     <title>Login</title>
 </head>
 <body>
@@ -30,9 +30,9 @@
                     </div>
                     <br>
                     <div class="inputBox">
-                    <input type="button" onClick="javascript:window.open('http://www.google.com', '_self');" value="Iniciar sesion" id="btnLogIn"  formtarget="_blank">
+                    <input type="button" onCck="javascript:window.open('http://www.google.com', '_self');" value="Iniciar sesion" id="btnLogIn"  formtarget="_blank">
 <!--                     <a href="login.html" id="btnLogIn">Iniciar sesion</a>
- -->                    <!--  <input type="button" onClick="javascript:window.open('http://www.facebook.com', '_blank');" value="Iniciar sesion" id="btnLogIn"  formtarget="_blank"> -->
+ -->                    <!--  <input type="button" onCck="javascript:window.open('http://www.facebook.com', '_blank');" value="Iniciar sesion" id="btnLogIn"  formtarget="_blank"> -->
                     <!--     <button type="submit" href ="#" target="_blank" id="btnLogIn">Iniciar sesión</button > -->
                             <!-- 
                             <a href="#" target="_blank" id="btnLogIn">Iniciar sesion</a>
