--- a/LogIns/LogIn2/reporte.html
+++ b/LogIns/LogIn2/reporte.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/RESOURCES/TabLogo.png">
+    <nk rel="icon" href="/RESOURCES/TabLogo.png">
     <script src="https://kit.fontawesome.com/e903878fec.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/LogIn2/style.css">
+    <nk rel="stylesheet" href="/LogIn2/style.css">
     <title>Registro</title>
 </head>
 <body>
@@ -21,7 +21,7 @@
                 <span>Por fecha</span>
                 <br>                    
                     <div class="dropdown">
-                        <button class="dropbtn">Seleccionar mes <i class="fa-solid fa-angle-down"></i></button>
+                        <button class="dropbtn">Seleccionar mes <i class="fa-sod fa-angle-down"></i></button>
                         <div class="dropdown-content">
                           <a href="#">Enero</a>
                           <a href="#">Febrero</a>
@@ -29,7 +29,7 @@
                         </div>
                     </div>
                     <div class="dropdown">
-                        <button class="dropbtn">Seleccionar año <i class="fa-solid fa-angle-down"></i></button>
+                        <button class="dropbtn">Seleccionar año <i class="fa-sod fa-angle-down"></i></button>
                         <div class="dropdown-content">
                           <a href="#">Enero</a>
                           <a href="#">Febrero</a>
@@ -46,7 +46,7 @@
                         <div class="col-md-24 left">
                             <label id="BirthDateLabel" class="text-base no-margin-top-bottom" data-bind="text: strings.lblBirthdate">Fecha de nacimiento</label>
                         </div>
-                        <div role="alert" aria-live="assertive" id="BirthDateError">
+                        <div role="alert" aria-ve="assertive" id="BirthDateError">
                         </div>
                         <div class="form-group form-control force-padding">
                             <div class="col-xs-8 form-group" data-bind="attr: { 'id': config.datePartString0 + 'Container' }" id="BirthDayContainer">
@@ -75,7 +75,7 @@
                                                 'id': config.datePartString1,
                                                 'name': config.datePartString1
                                             },
-                                            css: { 'win-dropdown': config.isWin10HostOOBEDesktop !== 0 }" aria-label="Mes de nacimiento" id="BirthMonth" name="BirthMonth"><option value="">Mes</option><option value="1">enero</option><option value="2">febrero</option><option value="3">marzo</option><option value="4">abril</option><option value="5">mayo</option><option value="6">junio</option><option value="7">julio</option><option value="8">agosto</option><option value="9">septiembre</option><option value="10">octubre</option><option value="11">noviembre</option><option value="12">diciembre</option>
+                                            css: { 'win-dropdown': config.isWin10HostOOBEDesktop !== 0 }" aria-label="Mes de nacimiento" id="BirthMonth" name="BirthMonth"><option value="">Mes</option><option value="1">enero</option><option value="2">febrero</option><option value="3">marzo</option><option value="4">abril</option><option value="5">mayo</option><option value="6">junio</option><option value="7">juo</option><option value="8">agosto</option><option value="9">septiembre</option><option value="10">octubre</option><option value="11">noviembre</option><option value="12">diciembre</option>
                                 </select>
                             </div>
                             <div class="col-xs-8 form-group" data-bind="attr: { 'id': config.datePartString2 + 'Container' }" id="BirthYearContainer">
@@ -95,7 +95,7 @@
                 <span>Por persona</span>
                 <br>
                 <div class="dropdown">
-                    <button class="dropbtn">Seleccionar elemento  <i class="fa-solid fa-angle-down"></i></button>
+                    <button class="dropbtn">Seleccionar elemento  <i class="fa-sod fa-angle-down"></i></button>
                     <div class="dropdown-content">
                       <a href="#">Enero</a>
                       <a href="#">Febrero</a>
@@ -108,7 +108,7 @@
                 <span>Por socio</span>
                 <br>
                 <div class="dropdown">
-                    <button class="dropbtn">Seleccionar elemento  <i class="fa-solid fa-angle-down"></i></button>
+                    <button class="dropbtn">Seleccionar elemento  <i class="fa-sod fa-angle-down"></i></button>
                     <div class="dropdown-content">
                       <a href="#">Enero</a>
                       <a href="#">Febrero</a>
@@ -118,9 +118,9 @@
             </div>
             <br>
     <div class="botones">
-        <input type="reset" id="btn1" value="Limpiar"> 
+        <input type="reset" id="btn1" value="mpiar"> 
                 <input type="submit" id="btn2" value="Generar" target="_blank"> 
-<!--                 <input type="text" value="Limpiar" onfocus="this.value=''">
+<!--                 <input type="text" value="mpiar" onfocus="this.value=''">
  -->           
     </div>
                 
