:sparkles: Add LogIn 1 & 2

--- a/LogIns/LogIn1/LogIn_Marcaciones.html
+++ b/LogIns/LogIn1/LogIn_Marcaciones.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <nk rel="icon" href="/RESOURCES/TabLogo.png">
-    <nk rel="stylesheet" href="style1.css">
+    <link rel="icon" href="/RESOURCES/TabLogo.png">
+    <link rel="stylesheet" href="/LogIn1/style1.css">
     <title>Login</title>
 </head>
 <body>
