--- a/LogIns/LogIn2/Reporte1.html
+++ b/LogIns/LogIn2/Reporte1.html
@@ -7,7 +7,6 @@
     <link rel="icon" href="/RESOURCES/TabLogo.png">
     <link rel="stylesheet" href="styleReporte.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/5/css/font-awesome.min.css" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/e903878fec.js" crossorigin="anonymous"></script>
     <title>Registros</title>
 </head>
@@ -125,7 +124,7 @@
                     <div class="col">
 
                     <div class="inputBox">
-                        <input type="button" onClick="javascript:window.open('http://www.google.com', '_self');" value="Iniciar sesion" id="btnLogIn"  >
+                        <input type="button" onClick="javascript:window.open('http://www.google.com', '_self');" value="Aceptar" id="btnLogIn"  >
                     </div>
                     </div>
                    
