--- a/LogIns/LogIn1/LogIn_Marcaciones.html
+++ b/LogIns/LogIn1/LogIn_Marcaciones.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Links de css externo, librerias, etc. -->
     <link rel="icon" href="/RESOURCES/TabLogo.png">
     <link rel="stylesheet" href="/LogIn1/style1.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" />
     <script src="https://kit.fontawesome.com/e903878fec.js" crossorigin="anonymous"></script>
     
-    <title>Login</title>
+    <title>Login: Agape</title>
 </head>
 <body>
 
@@ -25,13 +26,13 @@
         <form action="#" method="post" target="_blank">
             <div class="inputBox">
                 <label for="usuario">Usuario</label>
-                <input type="text" id="username" placeholder="Escriba su usuario" required autocomplete="username" name="username" >
+                <input type="text" id="username" placeholder="usario.mined123" required autocomplete="username" name="username" >
             </div>
                     <br>
             <div class="inputBox">
                 <label for="password">Contraseña</label>
-                <input type="password" autocomplete = "current-password" required  placeholder="Escriba su contraseña" name = "password" aria-required="true" value="" id="password"> <i class="bi bi-eye-slash" id="togglePassword"></i>
-                        <!-- placeholder = "••••••••••••" -->
+                <input type="password" placeholder="••••••••••••" id="password" name = "password" autocomplete = "current-password" aria-required="true" required  > 
+                <i class="bi bi-eye-slash" id="togglePassword"></i>
             </div>
                     <br>
             <div class="inputBox">
@@ -44,7 +45,7 @@
 
 </section>
 
-<!-- Js  -->
+<!-- Js code -->
 
 <script>
     const togglePassword = document.querySelector("#togglePassword");
@@ -68,6 +69,8 @@
 </script>
 
 <script src="js/app.js"></script>
+
+<!-- Js de Bootstrap -->
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script>
