--- a/LogIns/LogIn2/Reporte1.html
+++ b/LogIns/LogIn2/Reporte1.html
@@ -27,7 +27,7 @@
             <div class="row">
             <div class="col"> <!-- col-6 -->
                 <select aria-describedby="MonthError"  aria-label="Mes" class="fecha"  name="Mes">
-                    <option value='fa-angle-down'> Mes <i class="fa-angle-down"><!-- &#xf107; --></i>  </option>
+                    <option value='fecha'> Mes <i class="fa-angle-down"><!-- &#xf107; --></i>  </option>
                     <option value="1">Enero</option>
                     <option value="2">Febrebro</option>
                     <option value="3">Marzo</option>
@@ -45,7 +45,7 @@
             </div>
             <div class="col">
                 <select aria-describedby="YearError"  aria-label="Year" id="year" name="Year">
-                    <option value='fa-angle-down'>Año <i class="fa-angle-down"><!-- &#xf107; --></i>  </option>
+                    <option value='fecha'>Año <i class="fa-angle-down"><!-- &#xf107; --></i>  </option>
                     <option value="1">2022</option>
                     <option value="2">2023</option>
                     <option value="3">2024</option>
@@ -72,7 +72,7 @@
         <div class="row">
             <div class="col">
                 <select aria-describedby=PersonError"  aria-label="Persona" id="persona" name="Persona">
-                    <option value='fa-angle-down'>Selecionar persona<i class="fa-angle-down"><!-- &#xf107; --></i>  </option>
+                    <option value='action'>Selecionar persona<i class="fa-angle-down"><!-- &#xf107; --></i>  </option>
                     <option value="1"> Miguel Alejandro Navarro</option>
                     <option value="2"> Daniela Michelle Torres</option>
                     <option value="3"> Martín Elías Acosta</option>
@@ -99,7 +99,7 @@
             <div class="row">
             <div class="col">
                 <select aria-describedby="PartnerError"  aria-label="Partner" id="partner" name="Partner">
-                    <option value='fa-angle-down'>Seleccionar socio <i class="fa-angle-down"><!-- &#xf107; --></i>  </option>
+                    <option value='action'>Seleccionar socio <i class="fa-angle-down"><!-- &#xf107; --></i>  </option>
                     <option value="1">Microsoft El Salvador</option>
                     <option value="2">MINSAL</option>
                     <option value="3">USAID</option>
@@ -140,8 +140,12 @@
 </section>
 
 
-<!-- Js Validation Form -->    
+<!-- Js Validation Form -->   
 
+<!-- Js para Icon Password-->   
+
+<!-- Pureba que no sirve <script src="/LogIn2/appReporte.js"></script>
+ -->
     <!-- Js libraries and so -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script>
