--- a/LogIns/LogIn1/LogIn_Marcaciones.html
+++ b/LogIns/LogIn1/LogIn_Marcaciones.html
@@ -49,6 +49,8 @@
 <!-- Javascript (Can be move to a external .js) -->
 
 <script>
+
+        /* Js para Toggle Password */
     const togglePassword = document.querySelector("#togglePassword");
     const password = document.querySelector("#password");
 
@@ -66,7 +68,8 @@
     form.addEventListener('submit', function (e) {
         e.preventDefault();
     });
-
+    
+    /* Js para Toggle Password  */
 </script>
 
 <script src="/LogIn1/app.js"></script>
