--- a/LogIns/LogIn1/LogIn_Marcaciones.html
+++ b/LogIns/LogIn1/LogIn_Marcaciones.html
@@ -36,7 +36,8 @@
             </div>
                     <br>
             <div class="inputBox">
-                <button type="subtmit" onClick="javascript:window.open('http://www.google.com', '_self');" id="submit"  class="submit" >Iniciar sesión</button>
+                <button type="subtmit" onclick="enviar()" id="submit"  class="submit" >Iniciar sesión</button>
+                <!-- onClick="javascript:window.open('http://www.google.com', '_self');" -->
             </div>
     
         </form>
@@ -68,7 +69,7 @@
     form.addEventListener('submit', function (e) {
         e.preventDefault();
     });
-    
+
     /* Js para Toggle Password  */
 </script>
 
