--- a/LogIns/LogIn2/Reporte1.html
+++ b/LogIns/LogIn2/Reporte1.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="/RESOURCES/TabLogo1.png">
-    <link rel="stylesheet" href="styleReporte.css">
+    <link rel="stylesheet" href="/LogIn2/styleReporte.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/e903878fec.js" crossorigin="anonymous"></script>
     <title>Registros</title>
@@ -139,13 +139,10 @@
 </section>
 
 
-<!-- Js Validation Form -->   
-
-<!-- Js para Icon Password-->   
+<!-- Js Disbale DropdownList Form -->   
 
 
-<!-- Prueba que no sirve <script src="/LogIn2/appReporte.js"></script>
- -->
+
 
  <script src="/LogIn2/appReporte.js"></script>
 
