--- a/LogIns/DroplistDepartamentos/Dropdown.html
+++ b/LogIns/DroplistDepartamentos/Dropdown.html
@@ -5,8 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="/RESOURCES/TabLogo1.png">
-    <link rel="stylesheet" href="/DroplistDepartamentos/styleDropDown.css">
+    
+    <link rel="stylesheet" href="/DroplistDepartamentos/styleDropDown.css
+    ">
     <script src="depart-muncipio.js"></script>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/e903878fec.js" crossorigin="anonymous"></script>
     <title>Departamentos</title>
