:sparkles: add Js

--- a/LogIns/LogIn1/LogIn_Marcaciones.html
+++ b/LogIns/LogIn1/LogIn_Marcaciones.html
@@ -41,8 +41,7 @@
             </div>
                     <br>
             <div class="inputBox">
-                <button type="subtmit" onclick="enviar()" id="submit" class="submit" >Iniciar sesión</button>
-                <!-- onClick="javascript:window.open('http://www.google.com', '_self');" -->
+                <button type="submit" onclick="enviar()" id="submit" class="submit" >Iniciar sesión</button>
             </div>
     
         </form>
