--- a/LogIns/DroplistDepartamentos/Dropdown.html
+++ b/LogIns/DroplistDepartamentos/Dropdown.html
@@ -16,8 +16,7 @@
     <link rel="stylesheet" href="/RESOURCES/bootstrap-5.0.2-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/RESOURCES/bootstrap-5.0.2-dist/css/bootstrap.rtl.min.css">
 
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
- --> 
+
     <!-- LOCAL FONTAWESOME -->
     <link rel="stylesheet" href="/RESOURCES/fontawesome-free-6.1.1-web/css/all.css">
         
@@ -41,7 +40,7 @@
         <div class="row">
             <div class="col">
                 <select aria-label="Departamento" id="departamento" name="departamento">
-                    <option value='action'>Selecionar departmento<!-- <i class="fa-angle-down"></i> --><i class="bi bi-chevron-down"></i></option>
+                    <option value='action'>Selecionar departmento<i class="fa-angle-down"></i></option>
                 </select>   
             </div>    
         </div>
@@ -77,7 +76,7 @@
     </div>
     <div class="col">
         <div class="inputBox">
-            <input type="button" onClick="javascript:window.open('http://www.google.com', '_self');" value="Aceptar" id="btnLogIn"  >
+            <button type="submit" onClick="javascript:window.open('http://www.google.com', '_self');" value="Aceptar" id="btnEnviar"></button>
         </div>
     </div>            
 </div>
