:sparkles: Poniendo bonito el dropdownlist

--- a/DroplistDepartamentos/Dropdown.html
+++ b/DroplistDepartamentos/Dropdown.html
@@ -90,7 +90,7 @@
 
 <script>
     // user departamento code for selected option
-    let user_departamento_code = "AH";
+    let user_departamento_code = "MO";
     
     (function () {
     
