--- a/LogIns/LogIn2/Reporte1.html
+++ b/LogIns/LogIn2/Reporte1.html
@@ -15,6 +15,9 @@
     <link rel="stylesheet" href="/RESOURCES/bootstrap-5.0.2-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/RESOURCES/bootstrap-5.0.2-dist/css/bootstrap.rtl.min.css">
 
+    <!-- LOCAL FONT -->
+    <link rel="stylesheet" href="/RESOURCES/font.css">
+    
     <!-- LOCAL FONTAWESOME -->
     <link rel="stylesheet" href="/RESOURCES/fontawesome-free-6.1.1-web/css/all.css">
 
@@ -40,7 +43,7 @@
             <div class="col"> <!-- col-6 -->
 <!--                 <input type="date" name="fecha" id="fechaIpt" value="action">
  -->                 <select aria-describedby="MonthError" aria-label="Mes" class="fecha" id="mes" name="Mes">
-                    <option value='action'> Mes <i class="fa-angle-down"></i>  </option>
+                    <option value='action' selected> Mes <i class="fa-angle-down"></i>  </option>
                     <option value="1">Enero</option>
                     <option value="2">Febrebro</option>
                     <option value="3">Marzo</option>
@@ -58,7 +61,7 @@
             </div>
          <div class="col">
                 <select aria-describedby="YearError" class="fecha" aria-label="Year" id="year" name="Year">
-                    <option value='action'>Año<i class="fa-angle-down"> </i></i>  </option>
+                    <option value='action selected'>Año<i class="fa-angle-down"> </i></i>  </option>
                     <option value="1">2022</option>
                     <option value="2">2023</option>
                     <option value="3">2024</option>
@@ -132,12 +135,13 @@
         <div class="row"> 
             <div class="col">
                 <div class="inputBox">
-                    <button type="reset" id="btnLimpiar" >Limpiar</button> 
+                    <button type="reset" id="btnLimpiar" onclick = "limpiar()">Limpiar</button> 
                 </div>
             </div>
         <div class="col">
             <div class="inputBox">
-                <button type="submit" onClick="javascript:window.open('http://www.google.com', '_self');" value="" id="btnEnviar" title="Submit" name="submit" disabled="true">Aceptar</button>
+                <button type="submit" onClick="javascript:window.open('http://www.google.com', '_self');" id="btnEnviar" title="Submit" name="submit" disabled="true">Aceptar</button>
+                <!-- onclick="enviar()"   -->
             </div>
         </div>
                     
