:zap: Improve code

--- a/LogIns/LogIn1/LogIn_Marcaciones.html
+++ b/LogIns/LogIn1/LogIn_Marcaciones.html
@@ -36,22 +36,22 @@
             <br>
             <h2>Control y registro de marcaciones</h2>
             <br>
-        <form action="#" method="post"  >
+        <form  method="get"  >
             <div class="inputBox">
                 <label for="usuario">Usuario</label>
                 <input type="text" id="username" placeholder="usuario.mined123" required autocomplete="username" name="username" >
             </div>
                     <br>
-          <!--   <div class="inputBox">
+          <!--  <div class="inputBox">
                 <label for="password">Contraseña</label>
-                <input type="password" placeholder="••••••••••••" id="password" name = "password" autocomplete = "current-password" aria-required="true" required><i class="fa-solid fa-eye" id="togglePassword"></i>
-                ---
-            </div> -->
-             <div class="inputBox">
+                <input type="password" placeholder="••••••••••••" id="password" name = "password" autocomplete = "current-password" aria-required="true" required><i class="fa-solid fa-eye-slash" id="togglePassword"></i>
+               
+            </div>  -->
+          <div class="inputBox">
                 <label for="password">Contraseña</label>
                 <input type="password" placeholder="••••••••••••" id="password" name = "password" autocomplete = "current-password" aria-required="true" required  > 
               <i class="bi bi-eye-slash" id="togglePassword"></i>
-            </div> 
+            </div>  
                     <br>
             <div class="inputBox">
                 <button type="submit" onclick="enviar()" id="submit" class="submit" >Iniciar sesión</button>
@@ -70,9 +70,9 @@
 <script src="/LogIn1/app.js"></script>
 
 <!-- Js de Bootstrap -->
-
+<!-- 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script> -->
 
 </body>
 </html>
