--- a/LogIns/DroplistDepartamentos/Dropdown.html
+++ b/LogIns/DroplistDepartamentos/Dropdown.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="/DroplistDepartamentos/styleDropDown.css">
     <script src="depart-muncipio.js"></script>
 
+    <link rel="stylesheet" href="/DroplistDepartamentos/styleDropDown.css">
+
+
     <!-- LOCAL BOOTSTRAP  -->
     <link rel="stylesheet" href="/RESOURCES/bootstrap-5.0.2-dist/css/bootstrap.css">
     <link rel="stylesheet" href="/RESOURCES/bootstrap-5.0.2-dist/css/bootstrap.rtl.css">
@@ -19,9 +22,6 @@
     <!-- LOCAL FONT -->
     <link rel="stylesheet" href="/RESOURCES/font.css">
     
-    <!-- LOCAL FONTAWESOME -->
-    <link rel="stylesheet" href="/RESOURCES/fontawesome-free-6.1.1-web/css/all.css">
-        
 </head>
 <body>
 
@@ -32,7 +32,7 @@
     <img src="/RESOURCES/image.png" alt="gob sv" class="logo"><br>
     <h2>Seleccionar departamento</h2><br>
 
-<form action="#" method="post" target="_blank" name="formDrp">
+<form action="index.php" method="get" target="_blank" name="formDrp">
 
 <div class="inputBox">
     <div class="col-md-24 left">
@@ -42,8 +42,7 @@
     <div class="row">
         <div class="col">
             <select aria-label="Departamento" id="departamento" name="departamento">
-                <option value='action'>Selecionar departmento<i class="fa-angle-down"></i></option>
-            </select>   
+                <option value='action'>Selecionar departmento</select>   
         </div>    
     </div>
     </div>
@@ -93,11 +92,10 @@
 <!-- Js   -->   
 
 <script src="/DroplistDepartamentos/appDrp.js"></script>
-
 <script src="depart-muncipio.js"></script>
 
     <!-- Js libraries and so -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+<!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script>
-
+ -->
 </body>
