--- a/Version OFFLINE/LogIn_Marcaciones.html
+++ b/Version OFFLINE/LogIn_Marcaciones.html
@@ -8,6 +8,7 @@
     <title>Login: Agape</title>
 
     <!-- LOCAL RESOURCES  -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="/RESOURCES/bootstrap-5.0.2-dist/css/bootstrap.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" />
@@ -238,7 +239,7 @@ div form i {
             <br>
             <h2>Control y registro de marcaciones</h2>
             <br>
-        <form  method="get"  >
+        <form  method="get" id="#form_registro"  action="index.php" >
             <div class="inputBox">
                 <label for="usuario">Usuario</label>
                 <input type="text" id="username" placeholder="usuario.mined123" required autocomplete="username" name="username" >
