--- a/Version OFFLINE/Dropdown.html
+++ b/Version OFFLINE/Dropdown.html
@@ -33,7 +33,7 @@
     <img src="image.png" alt="gob sv" class="logo"><br>
     <h2>Seleccionar departamento</h2><br>
 
-<form action="index.php" method="get" target="_blank" name="formDrp">
+<form action="index.php" method="get" target="_blank" name="formDrp" id="form_registro">
 
 <div class="inputBox">
     <div class="col-md-24 left">
