--- a/Version OFFLINE/LogIn_Marcaciones.html
+++ b/Version OFFLINE/LogIn_Marcaciones.html
@@ -9,6 +9,7 @@
 
     <!-- LOCAL RESOURCES  -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link rel="stylesheet" href="LoginStyle.css">
     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     
