--- a/Version OFFLINE/LogIn_Marcaciones.html
+++ b/Version OFFLINE/LogIn_Marcaciones.html
@@ -52,7 +52,7 @@
             </div> 
          <br>
             <div class="inputBox">
-                <button type="submit" onclick="enviar()" id="submit" class="submit" >Iniciar sesión</button>
+                <button type="send" onclick="enviar()" id="submit" class="submit" >Iniciar sesión</button>
             </div>
     
         </form>
