--- a/Version OFFLINE/Dropdown.html
+++ b/Version OFFLINE/Dropdown.html
@@ -8,16 +8,11 @@
     <link rel="icon" href="TabLogo1.png">
     
     <link rel="stylesheet" href="styleDropDown.css">
+    <script src="depart-muncipio.js"></script>
+    <link rel="stylesheet" href="bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
- <script src="depart-muncipio.js"></script>
-<!--        <script src="departamentos.json"></script>--> 
- 
-
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-
-<link href="RESOURCES/bootstrap-5.0.2-dist/css/bootstrap-grid.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 
 <style>
     
@@ -33,7 +28,7 @@
     <img src="image.png" alt="gob sv" class="logo"><br>
     <h2>Seleccionar departamento</h2><br>
 
-<form action="index.php" method="get" target="_blank" name="formDrp" id="form_registro">
+<form action="index.php" method="get" target="_self" name="formDrp" id="form_registro">
 
 <div class="inputBox">
     <div class="col-md-24 left">
@@ -78,7 +73,6 @@
     <div class="col">
         <div class="inputBox">
             <button type="submit" onclick="enviar()" id="btnEnviar">Aceptar</button>
-            <!-- onClick="javascript:window.open('http://www.google.com', '_self');" value=""  -->
         </div>
     </div>            
 </div>
@@ -93,4 +87,5 @@
 <!-- Js   -->   
 
 <script src="appDepartamentos.js"></script>
+<script src="bootstrap.min.js"></script>
 </body>
