:zap: Improve HTML code

--- a/Version OFFLINE/Reporte1.html
+++ b/Version OFFLINE/Reporte1.html
@@ -48,18 +48,18 @@
                 <div class="col">
                     <select  aria-label="Persona" id="persona" name="Persona">
                         <option value='action'>Selecionar persona </option>
-                        <option value="1"> Miguel Alejandro Navarro</option>
-                        <option value="2"> Daniela Michelle Torres</option>
-                        <option value="3"> Martín Elías Acosta</option>
-                        <option value="4"> Valeria Alexandra Escobar</option>
-                        <option value="5"> Adriana Carolina Martinez</option>
-                        <option value="6"> Carlos Gustavo Sánchez</option>
-                        <option value="7"> Adyni Arleht Pocasangre</option>
-                        <option value="8"> Carlos Fernando Vásquez</option>
-                        <option value="9"> Iris Yanet Aguilar</option>
-                        <option value="10"> Carlos Eduardo Grande</option>
-                        <option value="11"> Rebeca Jimana Alcaine</option>
-                        <option value="12"> José Luis Menjívar</option>
+                        <option value="per_1"> Miguel Alejandro Navarro</option>
+                        <option value="per_2"> Daniela Michelle Torres</option>
+                        <option value="per_3"> Martín Elías Acosta</option>
+                        <option value="per_4"> Valeria Alexandra Escobar</option>
+                        <option value="per_5"> Adriana Carolina Martinez</option>
+                        <option value="per_6"> Carlos Gustavo Sánchez</option>
+                        <option value="per_7"> Adyni Arleht Pocasangre</option>
+                        <option value="per_8"> Carlos Fernando Vásquez</option>
+                        <option value="per_9"> Iris Yanet Aguilar</option>
+                        <option value="per_10"> Carlos Eduardo Grande</option>
+                        <option value="per_11"> Rebeca Jimana Alcaine</option>
+                        <option value="per_12"> José Luis Menjívar</option>
                     </select>   
                 </div>    
             </div>
@@ -76,14 +76,16 @@
             <div class="col">
                 <select aria-describedby="PartnerError"  aria-label="Partner" id="partner" name="Partner">
                     <option value='action'>Seleccionar socio </option>
-                    <option value="1">Microsoft El Salvador</option>
-                    <option value="2">MINSAL</option>
-                    <option value="3">USAID</option>
-                    <option value="4">Fundación Umbrella</option>
-                    <option value="5">EDUCO</option>
-                    <option value="6">FEDISAL</option>
-                    <option value="7">FEPADE</option>
-                    <option value="8">Fundación CINDE</option>
+                    <option value="parter_1">Microsoft El Salvador</option>
+                    <option value="parter_2">MINSAL</option>
+                    <option value="parter_3">USAID</option>
+                    <option value="parter_4">Fundación Umbrella</option>
+                    <option value="parter_5">EDUCO</option>
+                    <option value="parter_6">FEDISAL</option>
+                    <option value="parter_7">FEPADE</option>
+                    <option value="parter_8">Fundación CINDE</option>
+                    <option value="parter_9">ISDEMU</option>
+                    <option value="parter_10">Lorem, ipsum.</option>
                 </select>                         
             </div> 
         </div>
@@ -115,6 +117,6 @@
 </section>
 
 <script src="appReporte.js"></script>
-<script src="bootstrap.min.js"></script>
+<script src="depart-muncipio.js"></script>
 
 </body>
