--- a/Version OFFLINE/Reporte1.html
+++ b/Version OFFLINE/Reporte1.html
@@ -94,6 +94,12 @@
 
 <br>
 
+   <!--  <div class="alert alert-warning" role="alert">
+                A simple warning alert—check it out! tipo: Solo puede seleccionar una opcion o no zhe
+              </div> an alert can be add by using Bootsrap
+              https://getbootstrap.com/docs/5.0/components/alerts/
+         <br> -->
+
     <div class="container">
         <div class="row"> 
             <div class="col">
