:pencil: Correct mistakes

--- a/Version OFFLINE/Dropdown.html
+++ b/Version OFFLINE/Dropdown.html
@@ -28,7 +28,7 @@
     <img src="image.png" alt="gob sv" class="logo"><br>
     <h2>Seleccionar departamento</h2><br>
 
-<form action="index.php" method="get" target="_self" name="formDrp" id="form_registro">
+<form action="index.php" method="get" target="_self" name="form_departamento" id="form_registro">
 
 <div class="inputBox">
     <div class="col-md-24 left">
