--- a/Version OFFLINE/Reporte1.html
+++ b/Version OFFLINE/Reporte1.html
@@ -122,7 +122,8 @@
 </div>
 </section>
 
+
 <script src="appReporte.js"></script>
-<script src="depart-muncipio.js"></script>
+<script src="bootstrap.min.js"></script>
 
 </body>
