--- a/Version OFFLINE/LogIn_Marcaciones.html
+++ b/Version OFFLINE/LogIn_Marcaciones.html
@@ -10,10 +10,11 @@
     <!-- LOCAL RESOURCES  -->
     <link rel="stylesheet" href="LoginStyle.css">
     <link rel="stylesheet" href="bootstrap.min.css">
+
+    <!-- Resources ONLINE -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"/>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
    
 </head>
 <body>
