:wheelchair: Improve accesibility

--- a/Version OFFLINE/Dropdown.html
+++ b/Version OFFLINE/Dropdown.html
@@ -25,7 +25,7 @@
 
 <div class="contentBox">
     <div class="formBox">
-    <img src="image.png" alt="gob sv" class="logo"><br>
+    <img src="image.png"  alt="Gobierno SV" class="logo"><br>
     <h2>Seleccionar departamento</h2><br>
 
 <form action="index.php" method="get" target="_self" name="form_departamento" id="form_registro">
