--- a/Version OFFLINE/LogIn_Marcaciones.html
+++ b/Version OFFLINE/LogIn_Marcaciones.html
@@ -23,7 +23,7 @@
 
     <div class="contentBox">
     <div class="formBox" aria-live="polite" > <!--  onsubmit="signup();return false;" onsubmit="signup()"  -->
-        <img src="image.png" alt="gob sv" class="logo">
+        <img src="image.png" alt="Gobierno SV" class="logo">
             <br>
             <h2>Control y registro de marcaciones</h2>
             <br>
