--- a/Version OFFLINE/Reporte1.html
+++ b/Version OFFLINE/Reporte1.html
@@ -22,7 +22,7 @@
 
 <div class="contentBox">
     <div class="formBox">
-        <img src="image.png" alt="gob sv" class="logo"><br>
+        <img src="image.png"  alt="Gobierno SV" class="logo"><br>
         <h2>Generar registro</h2>
         <br>
 <form method="get" target="_self" id="form_registro">
