--- a/Version OFFLINE/Dropdown.html
+++ b/Version OFFLINE/Dropdown.html
@@ -7,12 +7,11 @@
     <title>Departamentos</title>
     <link rel="icon" href="TabLogo1.png">
     
-    <link rel="stylesheet" href="styleDropDown.css">
-    <script src="depart-muncipio.js"></script>
-    <link rel="stylesheet" href="bootstrap.min.css">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link rel="stylesheet" href="sss/styleDropDown.css">    
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/font.css">
+    <script src="js/jquery-3.6.0.min.js"></script>
+    <script src="js/depart-muncipio.js"></script>
 
 <style>
     
@@ -86,6 +85,6 @@
 
 <!-- Js   -->   
 
-<script src="appDepartamentos.js"></script>
-<script src="bootstrap.min.js"></script>
+<script src="js/appDepartamentos.js"></script>
+<script src="js/bootstrap.min.js"></script>
 </body>
