--- a/Version OFFLINE/LogIn_Marcaciones.html
+++ b/Version OFFLINE/LogIn_Marcaciones.html
@@ -8,12 +8,11 @@
     <title>Login: Agape</title>
 
     <!-- LOCAL RESOURCES  -->
-    <link rel="stylesheet" href="LoginStyle.css">
-    <link rel="stylesheet" href="bootstrap.min.css">
-
-    <!-- Resources ONLINE -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"/>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link rel="stylesheet" href="css/logInStyle.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap-icons.css">
+    <link rel="stylesheet" href="css/font.css">
+    <script src="js/jquery-3.6.0.min.js"></script>
 
    
 </head>
@@ -22,7 +21,7 @@
 <section>
 
     <div class="contentBox">
-    <div class="formBox" aria-live="polite" > <!--  onsubmit="signup();return false;" onsubmit="signup()"  -->
+    <div class="formBox" aria-live="polite" > 
         <img src="image.png" alt="Gobierno SV" class="logo">
             <br>
             <h2>Control y registro de marcaciones</h2>
@@ -50,8 +49,8 @@
 </section>
 
 
-<script src="AppLogin.js"></script>
-<script src="bootstrap.min.js"></script>
+<script src="js/AppLogin.js"></script>
+<script src="js/bootstrap.min.js"></script>
 
 </body>
 </html>
