--- a/Version OFFLINE/Reporte1.html
+++ b/Version OFFLINE/Reporte1.html
@@ -7,13 +7,10 @@
     <title>Registros</title>
     
     <link rel="icon" href="TabLogo1.png">
-    <link rel="stylesheet" href="styleReporte.css">
-    
-    <!-- LOCAL BOOTSTRAP  -->
-    <link rel="stylesheet" href="bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"/>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/styleReporte.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/font.css">
+    <script src="js/jquery-3.6.0.min.js"></script>
    
 </head>
 <body>
@@ -76,16 +73,16 @@
             <div class="col">
                 <select aria-describedby="PartnerError"  aria-label="Partner" id="partner" name="Partner">
                     <option value='action'>Seleccionar socio </option>
-                    <option value="parter_1">Microsoft El Salvador</option>
-                    <option value="parter_2">MINSAL</option>
-                    <option value="parter_3">USAID</option>
-                    <option value="parter_4">Fundación Umbrella</option>
-                    <option value="parter_5">EDUCO</option>
-                    <option value="parter_6">FEDISAL</option>
-                    <option value="parter_7">FEPADE</option>
-                    <option value="parter_8">Fundación CINDE</option>
-                    <option value="parter_9">ISDEMU</option>
-                    <option value="parter_10">Lorem, ipsum.</option>
+                    <option value="partner_1">Microsoft El Salvador</option>
+                    <option value="partner_2">MINSAL</option>
+                    <option value="partner_3">USAID</option>
+                    <option value="partner_4">Fundación Umbrella</option>
+                    <option value="partner_5">EDUCO</option>
+                    <option value="partner_6">FEDISAL</option>
+                    <option value="partner_7">FEPADE</option>
+                    <option value="partner_8">Fundación CINDE</option>
+                    <option value="partner_9">ISDEMU</option>
+                    <option value="partner_10">Lorem, ipsum.</option>
                 </select>                         
             </div> 
         </div>
@@ -123,7 +120,7 @@
 </section>
 
 
-<script src="appReporte.js"></script>
-<script src="bootstrap.min.js"></script>
+<script src="js/appReporte.js"></script>
+<script src="js/bootstrap.min.js"></script>
 
 </body>
