--- a/Version OFFLINE/Dropdown.html
+++ b/Version OFFLINE/Dropdown.html
@@ -7,7 +7,7 @@
     <title>Departamentos</title>
     <link rel="icon" href="TabLogo1.png">
     
-    <link rel="stylesheet" href="sss/styleDropDown.css">    
+    <link rel="stylesheet" href="css/styleDropDown.css">    
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/font.css">
     <script src="js/jquery-3.6.0.min.js"></script>
