:sparkles: add new features

--- a/Version OFFLINE/Inventario.html
+++ b/Version OFFLINE/Inventario.html
@@ -19,24 +19,87 @@
 
 <div class="contentBox">
     <div class="formBox">
-        <img src="image.png"  alt="Gobierno SV" class="logo"><br>
+        <img src="image.png"  alt="Gobierno SV" id="logo"><br>
         <h2>Inventario de bienes</h2>
         <br>
 <form method="get" target="_self" id="form_registro">
-    <div class="inputBox">
+    
+<div class="inputBox">
+    <div class="container">
+    <div class="row">
+    <div class="col-4" style="padding-left: 0px; padding-right: 20px;">
         <div class="col-md-24 left">
             <label>Número de bien</label>
-        </div>
-        <div class="container">
-            <div class="row">
-            <div class="col"> 
-            <input type="text" name="num_bien"  value="" required placeholder="35-1164-024"> <!-- Poner los guines para que se autocomplete -->
-            </div>
-        </div>
+        </div>    
+        <input type="text" name="descripcion" placeholder="4564-SFE4-0434" required>        
+    </div>
+    <div class="col-4" style="padding-left: 0px; padding-right: 20px;">
+        <div class="col-md-24 left">
+            <label>Marca</label>
+        </div>    
+        <input type="text" name="marca" placeholder="ORBITEC" required>
+    </div>
+    <div class="col-4" style="padding-left: 0px; padding-right: 0px;">
+        <div class="col-md-24 left">
+            <label>Modelo</label>
+        </div>    
+        <input type="text" name="modelo" placeholder="TU-1006" required>
+    </div>  
     </div>
 </div>
+</div>
+<br>
 
-<!-- placeholder="35-1164-024 -->
+<div class="inputBox">
+    <div class="container">
+    <div class="row">
+    <div class="col-3" style="padding-left: 0px; padding-right: 15px;">
+        <div class="col-md-24 left">
+            <label>Número de bien</label>
+        </div>    
+        <input type="text" name="descripcion" placeholder="4564-SFE4-0434" required>        
+    </div>
+    <div class="col-3" style="padding-left: 0px; padding-right: 15px;">
+        <div class="col-md-24 left">
+            <label>Marca</label>
+        </div>    
+        <input type="text" name="marca" placeholder="ORBITEC" required>
+    </div>
+    <div class="col-3" style="padding-left: 0px; padding-right: 0px;">
+        <div class="col-md-24 left">
+            <label>Modelo</label>
+        </div>    
+        <input type="text" name="modelo" placeholder="TU-1006" required>
+    </div>  
+    </div>
+</div>
+</div>
+<br>
+
+<div class="inputBox">
+    <div class="container">
+    <div class="row">
+    <div class="col-3" style="padding-left: 0px; padding-right: 5px;">
+        <div class="col-md-24 left">
+            <label>Número de bien</label>
+        </div>    
+        <input type="text" name="descripcion" placeholder="4564-SFE4-0434" required>        
+    </div>
+    <div class="col-3" style="padding-left: 0px; padding-right: 5px;">
+        <div class="col-md-24 left">
+            <label>Marca</label>
+        </div>    
+        <input type="text" name="marca" placeholder="ORBITEC" required>
+    </div>
+    <div class="col-3" style="padding-left: 0px; padding-right: 0px;">
+        <div class="col-md-24 left">
+            <label>Modelo</label>
+        </div>    
+        <input type="text" name="modelo" placeholder="TU-1006" required>
+    </div>  
+    </div>
+</div>
+</div>
 <br>
 
 <div class="inputBox">
@@ -53,89 +116,8 @@
 </div>
 <br>
 
-<div class="inputBox">
-    <div class="container">
-    <div class="row">
-    <div class="col-6" style="padding-left: 0px; padding-right: 5px;">
-        <div class="col-md-24 left">
-            <label>Marca</label>
-        </div>    
-        <input type="text" name="marca" placeholder="ORBITEC" required>
-    </div>
-    <div class="col-6" style="padding-left: 0px; padding-right: 0px;">
-        <div class="col-md-24 left">
-            <label>Modelo</label>
-        </div>    
-        <input type="text" name="modelo" placeholder="TU-1006" required>
-    </div>  
-    </div>
-</div>
-</div>
 
-<br>
 
-<div class="inputBox">
-    <div class="col-md-24 left">
-        <label>Serie</label>
-    </div>
-    <div class="container">
-        <div class="row">
-        <div class="col"> 
-        <input type="text" name="descripcion" placeholder="2132GY0OM758700076" required>
-        </div>
-    </div>
-</div>
-</div>
-<br>
-
- <div class="inputBox">
-    <div class="container">
-    <div class="row">
-    <div class="col-6" style="padding-left: 0px; padding-right: 5px;">
-        <div class="col-md-24 left">
-            <label>Fecha</label>
-        </div>    
-        <input type="date" name="fecha" required> <!-- Validar fecha, whre fecha <=  fechaHoy -->
-    </div>
-    <div class="col-6" style="padding-left: 0px; padding-right: 0px;">
-        <div class="col-md-24 left">
-            <label>Precio</label>
-        </div>    
-        <input type="number" name="precio" step='0.01' value='0.00' required>
-    </div>  
-    </div>
-</div>
-</div>
-
-<br>
-
-<div class="inputBox">
-    <div class="col-md-24 left">
-        <label>Estado</label>
-    </div>
-    <div class="container">
-        <div class="row">
-        <div class="col"> 
-         <input type="radio" name="" id="">
-        </div>
-    </div>
-</div>
-</div>
-<br>
-
-<div class="inputBox">
-    <div class="col-md-24 left">
-        <label>Serie</label>
-    </div>
-    <div class="container">
-        <div class="row">
-        <div class="col"> 
-        <input type="text" name="descripcion" placeholder="2132GY0OM758700076" required>
-        </div>
-    </div>
-</div>
-</div>
-<br>
 
 <div class="container">
         <div class="row"> 
