--- a/Version OFFLINE/ReporteFireFox.html
+++ b/Version OFFLINE/ReporteFireFox.html
@@ -7,14 +7,14 @@
     <title>Registros</title>
     
     <link rel="icon" href="TabLogo1.png">
-    <link rel="stylesheet" href="css/styleReporte.css">
+<!--    <link rel="stylesheet" href="css/styleReporte.css"> -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/font.css"> 
     <link rel="stylesheet" href="css/jquery-ui.css">
 
 <!--  -->
     <script src="js/jquery-3.6.0.min.js"></script>
-    <script src="js/jquery.js"></script>ç
+    <script src="js/jquery.js"></script>
     <script src="js/jquery-ui.min.js"></script>
 <!--     
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.1/jquery.js"></script>
@@ -22,7 +22,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/themes/base/jquery-ui.css">-->
 
     <!-- ****************************** -->
-<style>
+ <style>
 
 
 * {
@@ -238,9 +238,7 @@ input:focus::placeholder {
     }
 
 }
-
-
-</style>
+</style> -->
    
 </head>
 <body>
