:sparkles. Add new features

--- a/Version OFFLINE/ReporteFireFox.html
+++ b/Version OFFLINE/ReporteFireFox.html
@@ -24,17 +24,6 @@
     <!-- ****************************** -->
  <style>
 
-.col {
-    width: 100%;
-}
-
-#persona {
-  width: 100%;
-}
-
-#partner {
-  width: 100%;
-}
 
 * {
     margin: 0;
@@ -63,6 +52,25 @@
     margin-right: 15px;
 }
 
+#fechaIpt{
+    font-family: 'Roboto', sans-serif;
+    width: 100%;
+    width: -webkit-fill-available;
+    width: -moz-available;
+    padding: 10px 20px 10px 12px;
+    outline: none;
+    font-weight: 400;
+    border: 1px solid rgb(149, 149, 149);
+    letter-spacing: 1px;
+    background: transparent;
+    border-radius: 5px;
+}
+
+#fechaIpt:hover{
+    border: 1px solid #5047E6;
+    overflow: hidden;
+}
+
 select {
     font-family: 'Roboto', sans-serif;
     width: -webkit-fill-available;
@@ -80,10 +88,7 @@ select:hover{
     overflow: hidden;
 }
 
-#year{
-    margin-left: 10px;
-    width: -webkit-fill-available; 
-}
+
 
 
 section {
@@ -187,7 +192,9 @@ input:focus::placeholder {
     justify-items: center;
     justify-content: center;
     border: 2px solid #5047E6;
+    width: 100%;
     width: -webkit-fill-available;
+    width: -moz-available;
 
     
 }
@@ -216,7 +223,9 @@ input:focus::placeholder {
     justify-content: center;
     border: 2px solid #120e0e;
     margin-right: 10px;
+    width: 100%;
     width: -webkit-fill-available;
+    width: -moz-available;
 
 }
 
