:zap: Improve performance

--- a/Version OFFLINE/Inventario.html
+++ b/Version OFFLINE/Inventario.html
@@ -32,17 +32,17 @@
 <div class="inputBox">
     <div class="container">
     <div class="row">
-    <div class="col-5" style="padding-left: 0px; padding-right: 20px;">
+    <div class="col-4" style="padding-left: 0px; padding-right: 20px;">
         <div class="col-md-24 left">
             <label>Número de bien</label>
         </div>    
         <input type="text" name="id_bien" id = "id_bien" placeholder="4564-SFE4-0434" required autocomplete>        
     </div>
-    <div class="col-7" style="padding-left: 0px; padding-right: 0px;">
+    <div class="col-8" style="padding-left: 0px; padding-right: 0px;">
         <div class="col-md-24 left">
             <label>Descripción</label>
         </div>    
-        <input type="text" name="descripcion" id="descripcion"  placeholder="Escriba la descripcion del bien" required autocmplete>
+        <input type="text" name="descripcion" id="descripcion"  placeholder="Descripción del bien" required autocmplete>
     </div>
 </div>
 </div>
@@ -94,7 +94,7 @@
             <label>Estado</label>
         </div>   
             <select name="estado" id="slcEstado">
-                <option value="" selected>Estado del bien</option>
+                <option value="" selected></option>
                 <option value="bueno">Bueno</option>
                 <option value="malo">Malo</option>
             </select>
